<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TentangActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:navigationIcon="@drawable/abc_vector_test"
        android:background="@color/main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tentang Minakita"
            android:textSize="17sp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/robotobold"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/la_hands"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textViewhands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hands"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icons_connect"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textViewconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fluent_payment"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textViewpayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

</LinearLayout>